# CoQuiAAS

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  build.sh  configure  configure.ac
doc/: Doxyfile.in  Makefile.am  Makefile.in
docker/: Dockerfile  wrapper.sh
docker/coquiaas-2.0/: AUTHORS  Makefile.in  README  aclocal.m4  configure
docker/coquiaas-2.0/doc/: Makefile.in
docker/coquiaas-2.0/resources/: Makefile  Makefile.in
docker/coquiaas-2.0/src/: Makefile.am  Makefile.in
docker/coquiaas-2.0/src/argSolvers/: DefaultCompleteSemanticsSolver.cc  DefaultGroundedSemanticsSolver.cc  DefaultGroundedSemanticsSolver.h  DefaultIdealSemanticsSolver.cc  DefaultPreferredSemanticsSolver.cc  DefaultPreferredSemanticsSolver.h  DefaultSemistableSemanticsSolver.h  DefaultStageSemanticsSolver.cc  DefaultStageSemanticsSolver.h  DynamicSemanticsSolverDecorator.cc  GraphBasedGroundedSemanticsSolver.cc  GraphBasedGroundedSemanticsSolver.h  MaxSatEncodingHelper.h  SemanticsProblemSolver.cc  SolverFactory.h
docker/coquiaas-2.0/src/parser/: CNFFormatParser.cc  (+6 more)
m4/: ax_boost_log.m4  ax_boost_log_setup.m4  ax_check_zlib.m4
resources/: Makefile  Makefile.am  Makefile.in
resources/comssextractor/core/: Dimacs.h  Main.cc  Makefile  Solver.cc  Solver.h  SolverRL.h  depend.mk
resources/comssextractor/mtl/: template.mk
resources/comssextractor_ng/: .gitignore  Makefile  README
resources/comssextractor_ng/cmp/approx/: bCoMSSApprox.cc  bCoMSSApprox.h  bCoMSSApprox4PMS.cc  bCoMSSApprox4PMS.h  coMSSApprox.h  eCoMSSApprox.cc  eCoMSSApprox.h  eCoMSSApprox4PMS.cc  eCoMSSApprox4PMS.h  localSearch.cc  localSearch.h
resources/comssextractor_ng/cmp/core/: Dimacs.h  Main.cc  coMSSExtract.cc  coMSSExtract.h  constructCoMSSExtract.cc  constructCoMSSExtract.h  destructCoMSSExtract.cc  destructCoMSSExtract.h
resources/comssextractor_ng/cmp/enum/: ModelRotator.cc  ModelRotator.h  coMSSEnum.cc  coMSSEnum.h  coMSSExtract4Enum.h  constructCoMSSExtract4Enum.cc  constructCoMSSExtract4Enum.h  destructCoMSSExtract4Enum.cc  destructCoMSSExtract4Enum.h
resources/comssextractor_ng/cmp/ifaces/: MetaSolver.h  SatSolver.h  SatSolverFactory.cc  SatSolverFactory.h  destructAlgo.h
resources/comssextractor_ng/cmp/utils/: Alg.h  Alloc.h  IntTypes.h  Options.cc  Options.h  ParseUtils.h  Sort.h  System.cc  System.h  Vec.h  XAlloc.h  cmpTypes.h  wcnf.h
resources/comssextractor_ng/dtools/: README  debugCoMSS.sh  debugCoMSS4PMS.sh  debugEnumMCSes.sh  minisat  qbfdd.py  qmaxsat0.4comp_static  run  searchBugCoMSS.sh  searchBugEnumMCSes.sh  test_reduced.cnf  wcnfuzz
resources/comssextractor_ng/dtools/cnfuzzdd2009/: cnfdd  cnfuzz  wcnfuzz.c
resources/comssextractor_ng/glucose/: GlucoseSolver.h
resources/comssextractor_ng/glucose/core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h
resources/comssextractor_ng/glucose/mtl/: Heap.h  Map.h  Vec.h
resources/comssextractor_ng/glucose/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
resources/comssextractor_ng/glucose/utils/: Options.h  System.cc  System.h
resources/comssextractor_ng/minisat/: MiniSatSolver.h
resources/comssextractor_ng/minisat/core/: Solver.cc  Solver.h  SolverRL.cc  SolverRL.h  SolverTypes.h  saveOldCode
resources/comssextractor_ng/minisat/mtl/: Map.h  Vec.h
resources/comssextractor_ng/minisat/utils/: Options.h  ParseUtils.h  System.cc  System.h
src/: Main.cc  Makefile.am  Makefile.in  config.h.in
src/argSolvers/: DefaultCompleteSemanticsSolver.cc  DefaultCompleteSemanticsSolver.h  DefaultDungTriathlonSolver.cc  DefaultDungTriathlonSolver.h  DefaultGroundedSemanticsSolver.cc  DefaultGroundedSemanticsSolver.h  DefaultIdealSemanticsSolver.cc  DefaultIdealSemanticsSolver.h  DefaultPreferredSemanticsSolver.cc  DefaultPreferredSemanticsSolver.h  DefaultRangeBasedSemanticsSolver.cc  DefaultRangeBasedSemanticsSolver.h  DefaultSemistableSemanticsSolver.cc  DefaultSemistableSemanticsSolver.h  DefaultStableSemanticsSolver.cc  DefaultStableSemanticsSolver.h  DefaultStageSemanticsSolver.cc  DefaultStageSemanticsSolver.h  DynamicSemanticsSolverDecorator.h  GraphBasedGroundedSemanticsSolver.cc  GraphBasedGroundedSemanticsSolver.h  MaxSatEncodingHelper.cc  MaxSatEncodingHelper.h  MssEncodingHelper.cc  MssEncodingHelper.h  MultiSolver.cc  MultiSolver.h  SatEncodingHelper.cc  SatEncodingHelper.h  SemanticsProblemSolver.cc  SemanticsProblemSolver.h  SolverFactory.h
src/outputFormatters/: ICCMA17SolverOutputFormatter.cc  ICCMA17SolverOutputFormatter.h  ICCMA19SolverOutputFormatter.cc  ICCMA19SolverOutputFormatter.h  SolverOutputFormatter.cc  SolverOutputFormatter.h  SolverOutputFormatterFactory.h
src/parser/: AspartixFormatParser.cc  AspartixFormatParser.h  CNFFormatParser.cc  CNFFormatParser.h  IParser.h  ParserFactory.h  TrivialGraphFormatParser.cc  TrivialGraphFormatParser.h
src/satSolvers/: BuiltInMssSolver.cc  BuiltInMssSolver.h  BuiltInMssSolverNG.cc  BuiltInMssSolverNG.h  BuiltInMssSolverNGGlucose.cc  BuiltInMssSolverNGGlucose.h  BuiltInSatSolver.cc  BuiltInSatSolver.h  BuiltInSatSolverNG.cc  BuiltInSatSolverNG.h  BuiltInSatSolverNGGlucose.cc  BuiltInSatSolverNGGlucose.h  CoMssExtractorOutputInspector.cc  CoMssExtractorOutputInspector.h  CoMssSolverOutputInspector.h  ExternalCoMssSolver.cc  ExternalCoMssSolver.h  ExternalMaxSatSolver.cc  ExternalMaxSatSolver.h  ExternalMssSolver.cc  ExternalMssSolver.h  ExternalSatSolver.cc  ExternalSatSolver.h  LbxCoMssSolver.cc  LbxCoMssSolver.h  MaxSatSolver.h  MssSolver.h  SatSolver.h
src/specs/: Attacks.cc  Attacks.h  Semantics.h  Types.h  VarMap.cc  VarMap.h
src/utils/: CommandLineHelper.cc  CommandLineHelper.h  CompleteEncodingSatProblemReducer.cc  CompleteEncodingSatProblemReducer.h  ConcurrentStrQueue.h  ConflictFreenessEncodingSatProblemReducer.cc  ConflictFreenessEncodingSatProblemReducer.h  DefaultStatMap.cc  DefaultStatMap.h  ExtensionUtils.cc  ExtensionUtils.h  FakeStatMap.cc  FakeStatMap.h  LogStatMap.cc  LogStatMap.h  Logger.cc  Logger.h  SatProblemReducer.cc  SatProblemReducer.h  StableEncodingSatProblemReducer.cc  StableEncodingSatProblemReducer.h  StatMap.h  StatMapFactory.h
(+21 files in other folders)
